change custom popover for a MUI Popover in ColorPicker; fix popover position issue on small screens

--- a/src/styles/ColorPicker.module.css
+++ b/src/styles/ColorPicker.module.css
@@ -1,14 +1,14 @@
 .popover {
-    position: absolute;
-    top: calc(100% + 12px);
-    left: -2px;
+    z-index: 100;
+}
+
+.popover :global(.MuiPaper-root) {
+    transition: none !important;
     padding: 14px;
     background-color: var(--palette-base-main);
     border: 4px solid var(--palette-primary-main);
     border-radius: 10px;
     box-shadow: 4px 4px var(--palette-primary-main);
-    z-index: 100;
-    cursor: auto;
 }
 
 .popover :global(.react-colorful__saturation-pointer) {
